[gd_scene load_steps=5 format=3 uid="uid://btwqvvv1ehwdu"]

[ext_resource type="Script" path="res://entities/entity_scripts/healing_gun.gd" id="1_3j0lg"]
[ext_resource type="PackedScene" uid="uid://1nfehur2dapk" path="res://entities/projectiles/healing_laser.tscn" id="1_ein37"]
[ext_resource type="PackedScene" uid="uid://c4rkui846g2ue" path="res://components/status/combat_component.tscn" id="2_keitw"]
[ext_resource type="PackedScene" uid="uid://bdfaybp4djcn2" path="res://components/status/health_component.tscn" id="3_7p0se"]

[node name="HealingGun" type="Area2D" groups=["object"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_3j0lg")
min_angle_limit = 170.0
max_angle_limit = 370.0
override_max_health = 15

[node name="HealingLaser" parent="." instance=ExtResource("1_ein37")]

[node name="CombatComponent" parent="." instance=ExtResource("2_keitw")]

[node name="HealthComponent" parent="." instance=ExtResource("3_7p0se")]
max_health = 10

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="health_change" from="HealthComponent" to="." method="_on_health_component_health_change"]
